# vanity_grinder

./: .gitignore  Cargo.toml
src/: main.rs
