[package]
name = "vanity_grinder"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "1.14"
solana-sdk = "1.14"
bs58 = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam = "0.8"
clap = { version = "4.1", features = ["derive"] }
num_cpus = "1.13"
rand = "0.8"